<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_marginTop="170dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:drawablePadding="5dp"
            android:drawableTint="@color/purple_700"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="emailAddress" />

        <TextView
            android:id="@+id/emailErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:drawablePadding="5dp"
            android:drawableTint="@color/purple_700"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/pass_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/pass2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:drawablePadding="5dp"
            android:drawableTint="@color/purple_700"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/pass2_hint"
            android:inputType="textPassword"
            android:visibility="gone"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/passErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_pass"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/red" />


        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/prompt_signup" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/prompt_login"
            android:textColor="#5E35B1" />


        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""
            android:textColor="@color/red"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>